manifests/signalk/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalk
  namespace: signalk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: signalk
  template:
    metadata:
      labels:
        app: signalk
    spec:
      containers:
        - name: signalk
          image: signalk/signalk-server:latest
          ports:
            - containerPort: 3000
