manifests/signalk/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: signalk
  namespace: signalk
spec:
  selector:
    app: signalk
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
